Enhance portfolio website with SEO metadata, lazy loading for images, and add robots.txt and sitemap.xml

--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
     <meta content="QA Automation, SDET, Roman Pobotin, Test Automation, Python, Playwright, CI/CD, Ukraine QA Engineer, Software Testing, Manifesto"
           name="keywords">
     <meta content="Roman Pobotin" name="author">
-    <title>Roman Pobotin - QA Automation Engineer & SDET</title>
+    <meta content="summary" name="twitter:card"/>
+    <meta content="Roman Pobotin - QA Automation & SDET" name="twitter:title"/>
+    <meta content="Your description" name="twitter:description"/>
+    <meta content="./assets/favicon.ico" name="twitter:image"/>
+    <title>Roman Pobotin | QA Automation Engineer & SDET | Python, Playwright, AWS</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="./assets/css/styles.css" rel="stylesheet">
     <link href="./assets/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="https://goraved.github.io/" rel="canonical"/>
 </head>
 <body>
 <header class="hero">
@@ -30,7 +35,7 @@
         <div class="hero__content" style="margin: 0 auto; max-width: 800px;">
             <div class="hero__image-container">
                 <div class="hero__image-wrapper">
-                    <img alt="Roman Pobotin" class="hero__image" src="./assets/images/avatar.jpg">
+                    <img alt="Roman Pobotin" class="hero__image" loading="lazy" src="./assets/images/avatar.jpg">
                 </div>
             </div>
             <h1 class="hero__title">Roman Pobotin</h1>
@@ -42,7 +47,8 @@
             <p class="hero__tagline">QA Lead & Test Architecture Expert</p>
 
             <div class="social-links">
-                <a class="social-links__item" href="https://github.com/Goraved" rel="noopener noreferrer" target="_blank"
+                <a class="social-links__item" href="https://github.com/Goraved" rel="noopener noreferrer"
+                   target="_blank"
                    title="GitHub">
                     <i class="fab fa-github"></i>
                 </a>
@@ -58,7 +64,8 @@
                    title="Telegram">
                     <i class="fab fa-telegram-plane"></i>
                 </a>
-                <a class="social-links__item" href="https://repl.it/@RomanPobotin" rel="noopener noreferrer" target="_blank"
+                <a class="social-links__item" href="https://repl.it/@RomanPobotin" rel="noopener noreferrer"
+                   target="_blank"
                    title="Repl.it">
                     <i class="fas fa-code"></i>
                 </a>
@@ -117,7 +124,7 @@
                 </div>
             </div>
             <div class="more-projects">
-                <a class="btn more-projects__cv" href="./CV.pdf" target="_blank">
+                <a class="btn more-projects__cv" href="./files/CV.pdf" target="_blank">
                     <i class="fas fa-file-pdf"></i> Download CV
                 </a>
             </div>
@@ -783,12 +790,35 @@
             "DevOps"
         ],
         "description": "Experienced QA Automation Lead and SDET based in Kyiv, Ukraine, focused on building robust test automation systems and optimizing CI/CD workflows.",
-        "image": "./assets/images/avatar.jpg",
+        "image": "https://goraved.github.io/assets/images/avatar.jpg",
         "address": {
             "@type": "PostalAddress",
             "addressLocality": "Kyiv",
             "addressCountry": "UA"
-        }
+        },
+        "worksFor": {
+            "@type": "Organization",
+            "name": "ДП \"Дія\"",
+            "url": "https://company.diia.gov.ua/"
+        },
+        "alumniOf": [
+            {
+                "@type": "Organization",
+                "name": "SQUAD",
+                "url": "https://squad.ua/"
+            },
+            {
+                "@type": "Organization",
+                "name": "BCD TripTech",
+                "url": "https://bcdtriptech.peopleforce.io/careers"
+            },
+            {
+                "@type": "Organization",
+                "name": "GlobalLogic",
+                "url": "https://www.globallogic.com"
+            }
+        ],
+        "skills": "Python, Playwright, Pytest, AWS, Docker, CI/CD, Test Architecture, Team Leadership"
     }
 </script>
 </body>
