Revise portfolio content to enhance clarity and focus on QA leadership, update expertise categories, and improve skill representation

--- a/index.html
+++ b/index.html
@@ -105,15 +105,21 @@
                         culture of innovation, and mentoring individuals to transition into automation roles.
                         My hands-on approach has led to significant improvements, such as dramatically reducing
                         regression testing times from weeks to days and achieving comprehensive test coverage.
-                        I thrive on enhancing testing processes, integrating testing seamlessly into development
-                        cycles, and building advanced tools to solve complex challenges.
+                        I'm deeply committed to continuous improvement—both personally and for the teams I lead—always
+                        exploring new technologies and methodologies to elevate testing practices.
                     </p>
                     <p class="about__text">
-                        With strong foundations in QA principles, development practices, and DevOps methodologies, I aim
-                        to elevate quality assurance from a simple verification step to a strategic enabler within
-                        engineering teams. I am proficient in Python, various automation tools, and cloud environments,
-                        always seeking opportunities to leverage technology for better, faster, and more reliable
-                        software delivery.
+                        With strong foundations in QA principles, development practices, and DevOps methodologies, I
+                        aspire to
+                        champion quality as a strategic enabler rather than just a verification step. I'm driven by the
+                        vision of
+                        transforming how organizations perceive and implement quality assurance—integrating it
+                        seamlessly into
+                        development cycles and business objectives. Proficient in Python, various automation tools, and
+                        cloud environments,
+                        I consistently seek opportunities to innovate for better, faster, and more reliable software
+                        delivery while
+                        inspiring teams to embrace a quality-first mindset.
                     </p>
                     <div class="about__extra">
                         <div class="about__location">
@@ -139,17 +145,20 @@
             </div>
             <div class="expertise">
                 <div class="expertise__category">
-                    <h3 class="expertise__title">QA & Leadership</h3>
+                    <h3 class="expertise__title">Leadership & QA Strategy</h3>
                     <div class="expertise__skills">
                         <span class="skill-tag skill-tag--highlight">Team Leadership</span>
                         <span class="skill-tag skill-tag--highlight">Test Architecture</span>
-                        <span class="skill-tag">Test Strategy</span>
-                        <span class="skill-tag skill-tag--highlight">Mentoring</span>
-                        <span class="skill-tag">QA Process Design</span>
-                        <span class="skill-tag">ISTQB Methodologies</span>
+                        <span class="skill-tag skill-tag--highlight">QA Process Design</span>
+                        <span class="skill-tag">Mentoring & Team Growth</span>
                         <span class="skill-tag">Shift-Left Practices</span>
-                        <span class="skill-tag">Test-Driven Development</span>
-                        <span class="skill-tag">BDD Approach</span>
+                        <span class="skill-tag">CI/CD Integration</span>
+                        <span class="skill-tag">TestOps Implementation</span>
+                        <span class="skill-tag">Release Management</span>
+                        <span class="skill-tag">Cross-Team Collaboration</span>
+                        <span class="skill-tag">Resource Planning</span>
+                        <span class="skill-tag">QA Strategic Roadmapping</span>
+                        <span class="skill-tag">Agile & Scrum Practices</span>
                     </div>
                 </div>
 
@@ -158,29 +167,95 @@
                     <div class="expertise__skills">
                         <span class="skill-tag skill-tag--highlight">Python (Expert)</span>
                         <span class="skill-tag skill-tag--highlight">Playwright</span>
-                        <span class="skill-tag">Pytest</span>
-                        <span class="skill-tag">Selenium</span>
+                        <span class="skill-tag skill-tag--highlight">Pytest</span>
+                        <span class="skill-tag">Selenium WebDriver</span>
                         <span class="skill-tag">Appium</span>
                         <span class="skill-tag">JavaScript/TypeScript</span>
                         <span class="skill-tag">RESTful APIs</span>
                         <span class="skill-tag">GraphQL</span>
-                        <span class="skill-tag">Postman</span>
                         <span class="skill-tag">Flask</span>
+                        <span class="skill-tag">Test Framework Architecture</span>
+                        <span class="skill-tag">Computer Vision Testing</span>
+                        <span class="skill-tag">Test Data Generation</span>
+                        <span class="skill-tag">Bash/PowerShell</span>
                     </div>
                 </div>
 
                 <div class="expertise__category">
-                    <h3 class="expertise__title">DevOps & Cloud</h3>
+                    <h3 class="expertise__title">Web & Mobile Testing</h3>
                     <div class="expertise__skills">
-                        <span class="skill-tag skill-tag--highlight">AWS Services</span>
-                        <span class="skill-tag">AWS CDK (TypeScript)</span>
-                        <span class="skill-tag">Docker</span>
-                        <span class="skill-tag">Jenkins</span>
+                        <span class="skill-tag skill-tag--highlight">E2E Testing</span>
+                        <span class="skill-tag">Responsive Design Testing</span>
+                        <span class="skill-tag">Cross-Browser Testing</span>
+                        <span class="skill-tag">Mobile Web Testing</span>
+                        <span class="skill-tag">Native App Testing</span>
+                        <span class="skill-tag">Hybrid App Testing</span>
+                        <span class="skill-tag">UI/UX Validation</span>
+                        <span class="skill-tag">Progressive Web Apps</span>
+                        <span class="skill-tag">Component Testing</span>
+                    </div>
+                </div>
+
+                <div class="expertise__category">
+                    <h3 class="expertise__title">Test Methodologies</h3>
+                    <div class="expertise__skills">
+                        <span class="skill-tag">BDD Approach</span>
+                        <span class="skill-tag">TDD Implementation</span>
+                        <span class="skill-tag">ISTQB Methodologies</span>
+                        <span class="skill-tag">Exploratory Testing</span>
+                        <span class="skill-tag">Risk-Based Testing</span>
+                        <span class="skill-tag">Regression Strategy</span>
+                        <span class="skill-tag">Test Case Design</span>
+                        <span class="skill-tag">Test Data Management</span>
+                        <span class="skill-tag">Defect Management</span>
+                    </div>
+                </div>
+
+                <div class="expertise__category">
+                    <h3 class="expertise__title">AWS & Cloud Technologies</h3>
+                    <div class="expertise__skills">
+                        <span class="skill-tag skill-tag--highlight">AWS CDK (TypeScript)</span>
+                        <span class="skill-tag">AWS S3, RDS, ECS, ECR</span>
+                        <span class="skill-tag">AWS Device Farm</span>
+                        <span class="skill-tag">AWS Secret Manager, Boto3</span>
+                        <span class="skill-tag">AWS CloudFormation</span>
+                        <span class="skill-tag">AWS CodeCommit/Build/Pipeline</span>
+                        <span class="skill-tag">AWS ChatBot, SNS, VPC</span>
+                        <span class="skill-tag">IAM & Security Groups</span>
+                        <span class="skill-tag">Cloud Test Environments</span>
+                        <span class="skill-tag">Serverless Testing</span>
+                    </div>
+                </div>
+
+                <div class="expertise__category">
+                    <h3 class="expertise__title">CI/CD & DevOps</h3>
+                    <div class="expertise__skills">
+                        <span class="skill-tag skill-tag--highlight">Jenkins</span>
                         <span class="skill-tag">GitHub Actions</span>
                         <span class="skill-tag">GitLab CI</span>
-                        <span class="skill-tag">CI/CD Pipelines</span>
+                        <span class="skill-tag">Docker</span>
                         <span class="skill-tag">OpenShift</span>
                         <span class="skill-tag">Kubernetes</span>
+                        <span class="skill-tag">Infrastructure as Code</span>
+                        <span class="skill-tag">Pipeline Optimization</span>
+                        <span class="skill-tag">Artifactory</span>
+                        <span class="skill-tag">Continuous Testing</span>
+                        <span class="skill-tag">Version Control (Git)</span>
+                        <span class="skill-tag">Container Orchestration</span>
+                    </div>
+                </div>
+
+                <div class="expertise__category">
+                    <h3 class="expertise__title">API Testing & Microservices</h3>
+                    <div class="expertise__skills">
+                        <span class="skill-tag skill-tag--highlight">REST API Testing</span>
+                        <span class="skill-tag">SOAP API Testing</span>
+                        <span class="skill-tag">GraphQL Testing</span>
+                        <span class="skill-tag">Microservice Testing</span>
+                        <span class="skill-tag">API Mocking</span>
+                        <span class="skill-tag">Postman</span>
+                        <span class="skill-tag">Swagger/OpenAPI</span>
+                        <span class="skill-tag">Integration Testing</span>
                     </div>
                 </div>
 
@@ -194,10 +269,29 @@
                         <span class="skill-tag">Grafana</span>
                         <span class="skill-tag">Kibana</span>
                         <span class="skill-tag">Elasticsearch</span>
-                        <span class="skill-tag">Test Reporting</span>
-                        <span class="skill-tag">Performance Analysis</span>
+                        <span class="skill-tag">Performance Monitoring</span>
+                        <span class="skill-tag">Test Metrics & Analytics</span>
+                        <span class="skill-tag">Log Analysis</span>
                     </div>
                 </div>
+
+                <div class="expertise__category">
+                    <h3 class="expertise__title">Tools & Reporting</h3>
+                    <div class="expertise__skills">
+                        <span class="skill-tag skill-tag--highlight">Custom HTML Reporting</span>
+                        <span class="skill-tag">TestRail</span>
+                        <span class="skill-tag">Jira</span>
+                        <span class="skill-tag">Confluence</span>
+                        <span class="skill-tag">Test Analytics</span>
+                        <span class="skill-tag">Documentation</span>
+                        <span class="skill-tag">Testing Dashboards</span>
+                        <span class="skill-tag">ReportPortal.io</span>
+                        <span class="skill-tag">Allure Reporting</span>
+                        <span class="skill-tag">QA Metrics</span>
+                        <span class="skill-tag">Prompt Engineering</span>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
@@ -353,7 +447,7 @@
                 </div>
 
                 <div class="more-projects">
-                    <a class="more-projects__link" href="https://github.com/Goraved" target="_blank">
+                    <a class="more-projects__link" href="https://github.com/Goraved?tab=repositories" target="_blank">
                         <i class="fab fa-github"></i> Explore even more projects on my GitHub
                     </a>
                 </div>
