Add manifesto quotes, update meta tags, and enhance career section in portfolio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Roman Pobotin - QA Automation & SDET" property="og:title">
-    <meta content="./assets/favicon.ico" property="og:image">
+    <meta content="https://goraved.github.io/" property="og:url">
+    <meta content="./assets/avatar.jpg" property="og:image">
+    <meta content="Roman Pobotin" property="og:site_name">
+    <meta content="website" property="og:type">
     <meta content="Roman Pobotin, a QA Automation Lead & SDET based in Kyiv, specializing in test architecture, CI/CD optimization, Python automation, and leading QA teams."
           property="og:description">
     <meta content="Roman Pobotin, a QA Automation Lead & SDET based in Kyiv, specializing in test architecture, CI/CD optimization, Python automation, and leading QA teams."
@@ -15,8 +18,9 @@
     <meta content="Roman Pobotin" name="author">
     <meta content="summary" name="twitter:card"/>
     <meta content="Roman Pobotin - QA Automation & SDET" name="twitter:title"/>
-    <meta content="Your description" name="twitter:description"/>
-    <meta content="./assets/favicon.ico" name="twitter:image"/>
+    <meta content="Discover the QA Automation (SDET) Manifesto by Roman Pobotin — a guide to effective software quality practices and test automation strategy."
+          name="twitter:description"/>
+    <meta content="./assets/avatar.jpg" name="twitter:image"/>
     <title>Roman Pobotin | QA Automation Engineer & SDET | Python, Playwright, AWS</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -96,7 +100,7 @@
                     <p class="about__text">
                         I am an experienced <strong>QA Automation Lead</strong> with a rich background in Software
                         Development Engineering in Test (SDET) and Test Operations (TestOps), passionate about driving
-                        quality since 2015. My focus is on building robust test automation systems, optimizing
+                        quality since 2016. My focus is on building robust test automation systems, optimizing
                         CI/CD workflows, and leading quality assurance initiatives for diverse web and mobile
                         applications.
                     </p>
@@ -300,6 +304,14 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Projects</h2>
+                <blockquote class="manifesto-quote">
+                    <p><em>I believe in the power of personal projects. They allow engineers to experiment with tools
+                        relevant to their field, maintain market awareness, and demonstrate coding abilities to
+                        potential employers. These repositories showcase my coding style and approach, serving as
+                        practical evidence of my technical skills. While most of the code may be outdated as my coding
+                        skills evolve continuously, these are demonstrations rather than top-level open-source or
+                        commercial code.</em></p>
+                </blockquote>
                 <div class="section-line"></div>
             </div>
             <div class="projects">
@@ -472,7 +484,7 @@
                         <div class="timeline__dot"></div>
                         <div class="timeline__content">
                             <div class="timeline__date">Current</div>
-                            <h3 class="timeline__position">Senior AQA</h3>
+                            <h3 class="timeline__position">Senior AQA Engineer</h3>
                             <div class="timeline__company">
                                 <a href="https://company.diia.gov.ua/" target="_blank">ДП "Дія"</a>
                             </div>
@@ -487,7 +499,7 @@
                         <div class="timeline__dot"></div>
                         <div class="timeline__content">
                             <div class="timeline__date">2022 - 2024</div>
-                            <h3 class="timeline__position">Lead AQA/SDET</h3>
+                            <h3 class="timeline__position">Lead AQA Engineer/SDET</h3>
                             <div class="timeline__company">
                                 <a href="https://squad.ua/" target="_blank">SQUAD</a>
                             </div>
@@ -502,7 +514,7 @@
                         <div class="timeline__dot"></div>
                         <div class="timeline__content">
                             <div class="timeline__date">2022</div>
-                            <h3 class="timeline__position">Senior AQA</h3>
+                            <h3 class="timeline__position">Senior AQA Engineer</h3>
                             <div class="timeline__company">
                                 <a href="https://bcdtriptech.peopleforce.io/careers" target="_blank">BCD TripTech</a>
                             </div>
@@ -530,7 +542,7 @@
                         <div class="timeline__dot"></div>
                         <div class="timeline__content">
                             <div class="timeline__date">2019 - 2020</div>
-                            <h3 class="timeline__position">Senior QA</h3>
+                            <h3 class="timeline__position">Senior QA Engineer</h3>
                             <div class="timeline__company">
                                 <a href="https://intelity.com/" target="_blank">INTELITY</a>
                             </div>
@@ -544,7 +556,7 @@
                         <div class="timeline__dot"></div>
                         <div class="timeline__content">
                             <div class="timeline__date">2018 - 2019</div>
-                            <h3 class="timeline__position">Automation QA</h3>
+                            <h3 class="timeline__position">Automation QA Engineer</h3>
                             <div class="timeline__company">
                                 <a href="https://www.globallogic.com" target="_blank">GlobalLogic</a>
                             </div>
@@ -558,7 +570,7 @@
                         <div class="timeline__dot"></div>
                         <div class="timeline__content">
                             <div class="timeline__date">2017 - 2018</div>
-                            <h3 class="timeline__position">QA Engineer</h3>
+                            <h3 class="timeline__position">Middle QA Engineer → Senior QA Engineer</h3>
                             <div class="timeline__company">
                                 <a href="https://www.adyax.com" target="_blank">Adyax</a>
                             </div>
@@ -572,12 +584,27 @@
                         <div class="timeline__dot"></div>
                         <div class="timeline__content">
                             <div class="timeline__date">2016 - 2017</div>
-                            <h3 class="timeline__position">QA Engineer</h3>
+                            <h3 class="timeline__position">Intern QA → Middle QA Engineer</h3>
                             <div class="timeline__company">
                                 <a href="https://trustsourcing.com" target="_blank">Trust Sourcing</a>
                             </div>
                             <p class="timeline__description">
                                 Started career in QA with both manual and automation testing responsibilities.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="timeline__item">
+                        <div class="timeline__dot"></div>
+                        <div class="timeline__content">
+                            <div class="timeline__date">Education</div>
+                            <h3 class="timeline__position">Academic Degrees</h3>
+                            <div class="timeline__company">
+                                <a href="https://www.krok.edu.ua/ua/pro-krok/pidrozdili/navchalni/navchalno-naukovij-institut-informatsijnikh-ta-komunikatsijnikh-tekhnologij"
+                                   target="_blank">KROK University</a>
+                            </div>
+                            <p class="timeline__description">
+                                <b>Master Degree</b> in Management of IT projects<br>
+                                <b>Bachelor Degree</b> in Computer Science
                             </p>
                         </div>
                     </div>
@@ -587,7 +614,7 @@
                     <div class="career-cards">
                         <div class="career-card">
                             <div class="career-card__header">
-                                <h3 class="career-card__title">Senior AQA</h3>
+                                <h3 class="career-card__title">Senior AQA Engineer</h3>
                                 <div class="career-card__company">ДП "Дія"</div>
                                 <div class="career-card__period">Current</div>
                             </div>
@@ -608,7 +635,7 @@
 
                         <div class="career-card">
                             <div class="career-card__header">
-                                <h3 class="career-card__title">Lead AQA/SDET</h3>
+                                <h3 class="career-card__title">Lead AQA Engineer/SDET</h3>
                                 <div class="career-card__company">SQUAD</div>
                                 <div class="career-card__period">2022 - 2024</div>
                             </div>
@@ -623,7 +650,7 @@
 
                         <div class="career-card">
                             <div class="career-card__header">
-                                <h3 class="career-card__title">Senior AQA</h3>
+                                <h3 class="career-card__title">Senior AQA Engineer</h3>
                                 <div class="career-card__company">BCD TripTech</div>
                                 <div class="career-card__period">2022</div>
                             </div>
@@ -651,7 +678,7 @@
 
                         <div class="career-card">
                             <div class="career-card__header">
-                                <h3 class="career-card__title">Senior QA</h3>
+                                <h3 class="career-card__title">Senior QA Engineer</h3>
                                 <div class="career-card__company">INTELITY</div>
                                 <div class="career-card__period">2019 - 2020</div>
                             </div>
@@ -666,7 +693,7 @@
 
                         <div class="career-card">
                             <div class="career-card__header">
-                                <h3 class="career-card__title">Automation QA</h3>
+                                <h3 class="career-card__title">Automation QA Engineer</h3>
                                 <div class="career-card__company">GlobalLogic</div>
                                 <div class="career-card__period">2018 - 2019</div>
                             </div>
@@ -702,6 +729,16 @@
                                 <li>Developed algorithms and scripts to generate reports</li>
                             </ul>
                         </div>
+                        <div class="career-card">
+                            <div class="career-card__header">
+                                <h3 class="career-card__title">Education</h3>
+                                <div class="career-card__company">Academic Background</div>
+                            </div>
+                            <ul class="career-card__highlights">
+                                <li><b>Master Degree</b> in Management of IT projects</li>
+                                <li><b>Bachelor Degree</b> in Computer Science</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -712,6 +749,10 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">My AQA Manifesto Highlights</h2>
+                <blockquote class="manifesto-quote">
+                    <p><em>Note: This manifesto represents my personal perspective on the QA profession, reflecting the
+                        experiences and principles I've found essential for excellence in quality engineering.</em></p>
+                </blockquote>
                 <div class="section-line"></div>
             </div>
             <div class="manifesto-container">
