--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Roman Pobotin - QA Automation & SDET" property="og:title">
     <meta content="https://goraved.github.io/" property="og:url">
-    <meta content="./assets/avatar.jpg" property="og:image">
+    <meta content="./assets/images/avatar.jpg" property="og:image">
     <meta content="Roman Pobotin" property="og:site_name">
     <meta content="website" property="og:type">
     <meta content="Roman Pobotin, a QA Automation Lead & SDET based in Kyiv, specializing in test architecture, CI/CD optimization, Python automation, and leading QA teams."
@@ -20,7 +20,7 @@
     <meta content="Roman Pobotin - QA Automation & SDET" name="twitter:title"/>
     <meta content="Discover the QA Automation (SDET) Manifesto by Roman Pobotin — a guide to effective software quality practices and test automation strategy."
           name="twitter:description"/>
-    <meta content="./assets/avatar.jpg" name="twitter:image"/>
+    <meta content="./assets/images/avatar.jpg" name="twitter:image"/>
     <title>Roman Pobotin | QA Automation Engineer & SDET | Python, Playwright, AWS</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
